<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@drawable/hamburger">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/profile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bannerImg"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/workoutbanner" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/calCard"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:backgroundTint="@color/light_background"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bannerImg">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/caloryIcon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/burn" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_vertical|center_horizontal"
                            android:layout_marginStart="8dp">

                            <TextView
                                android:id="@+id/caloryCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="0dp"
                                android:fontFamily="@font/outfit_medium"
                                android:text="0"
                                android:textColor="@color/text_dark"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/caloryString"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="0dp"
                                android:fontFamily="@font/outfit_medium"
                                android:text="@string/calories"
                                android:textAlignment="center"
                                android:textColor="@color/text_dark"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/bmi_card"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="12dp"
                    android:backgroundTint="@color/light_grey"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintBottom_toBottomOf="@+id/calCard"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/calCard"
                    app:layout_constraintTop_toBottomOf="@+id/bannerImg">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/bmi" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_vertical|center_horizontal"
                            android:layout_marginStart="8dp">

                            <TextView
                                android:id="@+id/bmiCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="0dp"
                                android:fontFamily="@font/outfit_medium"
                                android:text="0"
                                android:textColor="@color/text_dark"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="0dp"
                                android:fontFamily="@font/outfit_medium"
                                android:text="@string/bmi"
                                android:textColor="@color/text_dark"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_medium"
                    android:text="@string/category"
                    android:textColor="@color/text_dark"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.028"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/calCard" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/categoryCard"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="15dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="7dp"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintBottom_toTopOf="@+id/categoryCard2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/category">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card1"
                        android:padding="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="150dp"
                            android:fontFamily="@font/outfit_semibold"
                            android:text="@string/exercise_by_body_parts"
                            android:textColor="@color/gradient_start"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="150dp"
                            android:fontFamily="@font/outfit_regular"
                            android:text="Get started by focusing on muscles that need attention."
                            android:textColor="@color/gradient_start"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/categoryCard2"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:cardCornerRadius="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintBottom_toTopOf="@+id/categoryCard3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categoryCard">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card2"
                        android:padding="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="150dp"
                            android:fontFamily="@font/outfit_semibold"
                            android:text="@string/exercise_by_equipments"
                            android:textColor="@color/gradient_start"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="150dp"
                            android:fontFamily="@font/outfit_regular"
                            android:text="Have limited equipments? Browse from a vast range of equipment specific excercises."
                            android:textColor="@color/gradient_start"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/categoryCard3"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categoryCard2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card3"
                        android:padding="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="150dp"
                            android:fontFamily="@font/outfit_semibold"
                            android:text="@string/exercise_by_target"
                            android:textColor="@color/gradient_start"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="160dp"
                            android:fontFamily="@font/outfit_regular"
                            android:text="Get crushing today! Work on that muscle the right way. Browse from the list of muscles."
                            android:textColor="@color/gradient_start"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryCard3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        style="Widget.App.NavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/drawer_background"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@drawable/navigation_item_background"
        app:itemIconTint="@color/gradient_start"
        app:itemMaxLines="1"
        app:itemTextAppearance="@style/TextAppearance.App.TitleSmall"
        app:menu="@menu/navigation_sidebar" />

</androidx.drawerlayout.widget.DrawerLayout>
